syntax = "proto3";

package hi255_grpc;
option go_package = "./hi255_grpc";

service Service {
  rpc FetchRemoteDevices (Empty) returns (stream RemoteDevicesResponse) {}
  rpc FetchMessages (Empty) returns (stream MessagesResponse) {}

  rpc UpdateConfig (UpdateConfigRequest) returns (Empty) {}
  rpc SendGreeting (SendGreetingRequest) returns (CommonResponse) {}
  rpc SendFile (SendFileRequest) returns (CommonResponse) {}
  rpc SendText (SendTextRequest) returns (CommonResponse) {}
}

message Empty {}

message CommonResponse {
  int32 status = 1;
}

// Multicast
message RemoteDevicesResponse {
  message RemoteDeviceItem {
    string id = 1;
    string name = 2;
    string address = 3;
    string platform = 4;
  }
  repeated RemoteDeviceItem remote_devices = 1;
}

// Message
message MessagesResponse {
  message MessageItem {
    int32 message_type = 1;
    int64 timestamp = 2;
    string remote_id = 3;
    string content = 4;
  }
  repeated MessageItem messages = 1;
}

// UpdateConfig
message UpdateConfigRequest {
  string device_id = 1;
  string device_name = 2;
  string download_path = 3;
  bool keep_file_time = 4;
}

// SendGreeting
message SendGreetingRequest {
  string remote_address = 1;
}

// SendFile
message SendFileRequest {
  string file_path = 1;
  string remote_id = 2;
}

// SendText
message SendTextRequest {
  string text = 1;
  string remote_id = 2;
}

